--- a/src/app/invoices/styles.module.css
+++ b/src/app/invoices/styles.module.css
@@ -21,24 +21,14 @@
 
 .pacmanContainer {
     background-color: #9277FF;
+    padding: 30px;
 }
-.pacman {
-    position: relative;
-    width: 40px;
-    height: 40px;
-    background: conic-gradient(white 0deg 300deg, #9277FF 300deg 360deg);
-    border-radius: 50%;
-    margin-top: 20px;
-    margin-bottom: 20px; 
-  }
 
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-
-  .iconMoonContainer{
+.iconMoonContainer{
     padding: 40px;
+  }
+
+.contentContainer {
+    width: 700px;
+    height: 600px;
   }
